tests/pass/parse/integers/u64/min_fail.leo
function main() {
    const a: u64 = -1;
}