tests/fail/parse/array/type_fail.leo
function main() {
    const a: [u8; -2] = [0u32; 2];
}